--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,6 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 
-<a href="/celebrities/new-celebrity">Formmulario para crear nueva Celebrity  </a>
+<a href="celebrities/new-celebrity">Formmulario para crear nueva
+  Celebrity
+</a>
