--- a/views/celebrities/celebrities.hbs
+++ b/views/celebrities/celebrities.hbs
@@ -1,1 +1,11 @@
-<h1>celebrityyyyy</h1>
+<h1> LISTA celebrityyyyy</h1>
+
+
+
+  {{#each allCelebrities}}
+
+    
+    <h4>{{this.name}}</h4>
+  
+
+  {{/each}}
