--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,5 +5,6 @@
   Celebrity
 </a>
 
-<a href="/celebrities">LISTA DECELEBRITIESSSS
-</a>
+<a href="/celebrities">LISTA DECELEBRITIESSSS</a>
+
+<a href="/movies/create">CREAR MOVIEEEEEE</a>
