--- a/views/movies/new-movie.hbs
+++ b/views/movies/new-movie.hbs
@@ -17,9 +17,12 @@
     <select name="name">
 
 
-      {{!-- {{#each dbCelebrity}}
+      {{#each dbcelebrities}}
         <option value="{{this._id}}"> {{this.name}} </option>
-      {{/each}} --}}
+      {{/each}}
+
+
+
     </select>
   </label>
 
